# routeros

./: .gitignore  Cargo.toml  build.rs
ros_macro/: Cargo.toml
ros_macro/src/: lib.rs
ros_macro/tests/: attribute_macro.rs
ros_model/: bridge.txt  interface.txt  ip.txt  system.txt
src/: client.rs  lib.rs  main.rs  model.rs  routeros.rs
src/client/: api.rs  config.rs  supplier.rs
src/hardware/: mod.rs
src/model/: inet.rs  ros_value.rs
src/model/ros_value/: tests.rs
src/routeros/: client.rs  json.rs  model.rs
src/routeros/client/: api.rs  config.rs  http.rs
src/routeros/model/: bridge.rs  bridge.txt  system.rs  tests.rs
