[package]
name = "routeros-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
rust-crypto = "^0.2"
reqwest = { version = "0.11", features = ["json", "rustls-tls-webpki-roots"] }
# base64 = "0.13.0"
serde = { version = "1.0.133", features = ["default"] }
serde_json = "1.0.74"
serde-aux = "3.0.1"
async-trait = "0.1.52"
ros_macro = { path = "ros_macro" }

[build-dependencies]
regex = "1.5.4"
convert_case = "0.5.0"