[package]
name = "routeros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.52"
field-ref = "0.2.1"
mac_address = "1.1.3"

[build-dependencies]
regex = "1.5.4"
convert_case = "0.5.0"